--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "code-runner.saveFileBeforeRun": true,
     "code-runner.runInTerminal": true,
     "files.associations": {
-        "string": "cpp"
+        "string": "cpp",
+        "ostream": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "*.tcc": "cpp"
     }
 }
